[package]
name = "moqt-demo-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simple"
path = "src/simple.rs"

[[bin]]
name = "hybrid"
path = "src/hybrid.rs"

[[bin]]
name = "moqt-demo-server"
path = "src/main.rs"

[dependencies]
bytes = "1"
tokio = { version = "1", features = ["full"] }
wtransport = { version = "0.6.1", features = ["self-signed"] }
anyhow = "1"
moqtail = { path = "../.." }
tracing = "0.1"
tracing-subscriber = "0.3"